--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,6 +253,7 @@
   -o-border-radius: 3px;
   border-radius: 3px; }
   #reply-reply-desc .fa {
+    color: rgba(0, 0, 0, 0.2);
     line-height: 22px;
     cursor: pointer; }
 
@@ -281,21 +282,22 @@
     .reply-form button[type=submit]:hover {
       background: #007aeb; }
 
-.reply-list h2, .hot-reply-list h2 {
-  border-bottom: 1px solid #f0f0f0; }
-  .reply-list h2 .fa, .hot-reply-list h2 .fa {
-    font-size: 18px;
-    margin-right: 5px; }
+.reply-list h2 .fa, .hot-reply-list h2 .fa {
+  font-size: 18px;
+  margin-right: 5px; }
 
 .reply-list, .hot-reply-list {
   margin-top: 20px; }
   .reply-list .reply-item, .hot-reply-list .reply-item {
+    border-bottom: 1px solid #eee;
     width: 100%; }
     .reply-list .reply-item:before, .reply-list .reply-item:after, .hot-reply-list .reply-item:before, .hot-reply-list .reply-item:after {
       content: "";
       display: table; }
     .reply-list .reply-item:after, .hot-reply-list .reply-item:after {
       clear: both; }
+    .reply-list .reply-item:first-child, .hot-reply-list .reply-item:first-child {
+      border-bottom: none; }
   .reply-list .reply-wrapper, .hot-reply-list .reply-wrapper {
     margin: 20px 0;
     position: relative; }
@@ -340,6 +342,8 @@
       margin-left: 2%;
       vertical-align: middle;
       color: #ccc; }
+    .reply-list .reply-main .reply-content, .hot-reply-list .reply-main .reply-content {
+      line-height: 24px; }
     .reply-list .reply-main .rcontent, .hot-reply-list .reply-main .rcontent {
       color: #333; }
     .reply-list .reply-main .rrdesc, .hot-reply-list .reply-main .rrdesc {
@@ -631,11 +635,8 @@
   text-align: center;
   font-size: 16px; }
 
-.reply-list .pager {
-  margin: 0; }
-
 .pager {
-  margin: 20px 0;
+  margin: 16px 0;
   line-height: 40px;
   height: 40px; }
   .pager .pager-wrapper {
@@ -650,8 +651,8 @@
       line-height: 40px;
       height: 40px;
       float: left;
-      width: 24px;
       text-align: center;
+      padding: 0 3px;
       margin: 0 2px; }
       .pager .pager-wrapper li a {
         vertical-align: middle;
@@ -669,7 +670,7 @@
 
 .message-list li {
   padding: 20px 0;
-  border-bottom: 1px solid #ddd; }
+  border-bottom: 1px solid #eee; }
   .message-list li .user-avatar {
     margin-right: 12px; }
   .message-list li p {
@@ -709,6 +710,7 @@
   padding: 10px 0; }
 
 .g-tip {
+  font-weight: bold;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
