--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -1,8 +1,10 @@
 //font
 //-----------------------
-$font:13px/1.7 'Helvetica Neue',Arial,'Hiragino Sans GB','Microsoft YaHei',sans-serif;
+$font:13px/1.7 'Helvetica Neue',Arial,'Microsoft YaHei','Hiragino Sans GB',sans-serif;
 
 $font-color:#8c8c8c;
+
+$main-width:1240px;
 //colors
 //-----------------------
 
