--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -17,8 +17,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 1240px;
     height: 50px;
-    padding: 0 30px;
     position: relative; }
     .nav .nav-container:before, .nav .nav-container:after {
       content: "";
@@ -111,15 +111,18 @@
 
 footer {
   font-size: 12px;
-  color: #999;
-  padding: 20px 30px;
-  border-top: 1px solid #e5e5e5;
-  line-height: 24px; }
+  color: #999; }
   footer:before, footer:after {
     content: "";
     display: table; }
   footer:after {
     clear: both; }
+  footer .wrapper {
+    line-height: 24px;
+    padding: 20px 30px;
+    border-top: 1px solid #f4f4f4;
+    margin: 0 auto;
+    width: 1240px; }
   footer a {
     color: #999; }
     footer a:hover {
