--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,53 +1,58 @@
-html {
-  font: 13px/1.7 "Helvetica Neue", Arial, "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
+/*
+Syntax error: File to import not found or unreadable: vars.
+              Load paths:
+                /Users/tusm/spwork/expressjs-sns/public (DEPRECATED)
+                /Users/tusm/spwork/expressjs-sns/public/sass
+        on line 1 of sass/reset.scss
 
-body {
-  margin: 0;
-  padding: 0;
-  background: white;
-  width: 100%;
-  color: #8c8c8c;
-  word-wrap: break-word; }
-  body a {
-    text-decoration: none;
-    color: #4083aa; }
-    body a:hover {
-      color: #205f7e; }
-  body h1, body h2 {
-    font-size: 18px;
-    margin: 0; }
-  body h3, body h4 {
-    font-size: 14px;
-    margin: 0; }
-  body h5, body h6 {
-    font-size: 12px;
-    margin: 0; }
+1: @import 'vars';
+2: 
+3: //reset
+4: //------------------------------------------
+5: html{
+6:     font:$font;
 
-::selection {
-  background: #a8d1ff; }
-
-::-moz-selection {
-  background: #a8d1ff; }
-
-img {
-  vertical-align: middle;
-  border: 0; }
-
-p, ul, ol {
-  margin: 0; }
-
-ul, ol {
-  padding-left: 0;
-  list-style: none; }
-
-.list-inline > li {
-  display: inline-block; }
-
-.fa {
-  min-width: 16px;
-  font-size: 14px;
-  margin-right: 2px;
-  vertical-align: baseline; }
-
-.date {
-  color: #ccc; }
+Backtrace:
+sass/reset.scss:1
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/import_node.rb:66:in `rescue in import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/import_node.rb:45:in `import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:283:in `visit_import'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:152:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/stack.rb:121:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:152:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/base.rb:52:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:161:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:173:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:160:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:180:in `visit_root'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:151:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/tree/root_node.rb:20:in `render'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/engine.rb:274:in `render'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/plugin/compiler.rb:378:in `update_stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/plugin/compiler.rb:189:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/plugin/compiler.rb:186:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/plugin/compiler.rb:186:in `update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/plugin/compiler.rb:357:in `on_file_changed'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/lib/sass/plugin/compiler.rb:250:in `block in watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/vendor/listen/lib/listen/listener.rb:252:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.10/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: File to import not found or unreadable: vars.\A               Load paths:\A                 /Users/tusm/spwork/expressjs-sns/public (DEPRECATED)\A                 /Users/tusm/spwork/expressjs-sns/public/sass\A         on line 1 of sass/reset.scss\A \A 1: @import 'vars';\A 2: \A 3: //reset\A 4: //------------------------------------------\A 5: html{\A 6:     font:$font;"; }
