--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -1,5 +1,5 @@
 html {
-  font: 13px/1.7 "Helvetica Neue", Arial, "Microsoft YaHei", "Hiragino Sans GB", sans-serif; }
+  font: 13px/1.7 "Helvetica Neue", Arial, "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif; }
 
 body {
   margin: 0;
@@ -422,7 +422,7 @@ textarea {
   height: auto; }
 
 .btn {
-  background: #0084ff;
+  background: #3498db;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
@@ -436,7 +436,7 @@ textarea {
   border: 0; }
   .btn:hover {
     text-decoration: none;
-    background: #007aeb;
+    background: #2980b9;
     color: #fff;
     border: none; }
   .btn:focus {
@@ -465,7 +465,7 @@ textarea {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 1240px;
+    width: 1040px;
     height: 50px;
     position: relative; }
     .nav .nav-container:before, .nav .nav-container:after {
@@ -505,7 +505,7 @@ textarea {
   .nav .menu {
     position: absolute;
     text-align: right;
-    right: 30px;
+    right: 0;
     width: 40%;
     height: 50px; }
     .nav .menu li {
@@ -534,7 +534,7 @@ textarea {
           position: absolute;
           top: 7px;
           left: 28px;
-          background: #fc5140;
+          background: #e74c3c;
           color: #fff;
           -webkit-border-radius: 8px;
           -moz-border-radius: 8px;
@@ -568,9 +568,9 @@ footer {
   footer .wrapper {
     line-height: 24px;
     padding: 20px 30px;
-    border-top: 1px solid #f4f4f4;
+    border-top: 1px solid #f0f0f0;
     margin: 0 auto;
-    width: 1240px; }
+    width: 1040px; }
   footer a {
     color: #999; }
     footer a:hover {
@@ -592,7 +592,7 @@ footer {
   .main .main-wrapper {
     background: #fff;
     margin: 0px auto;
-    width: 1240px;
+    width: 1040px;
     min-height: 650px;
     padding: 100px 10px 50px;
     color: #666; }
@@ -604,7 +604,7 @@ footer {
 
 .content {
   float: left;
-  width: 830px; }
+  width: 740px; }
   .content .list-wrapper h1 {
     float: left;
     margin: 0;
@@ -615,7 +615,7 @@ footer {
 
 .sidebar {
   margin-left: 30px;
-  width: 380px;
+  width: 270px;
   float: left; }
   .sidebar h3, .sidebar h4 {
     margin-bottom: 10px; }
@@ -698,7 +698,8 @@ footer {
         color: #111;
         vertical-align: middle; }
     .topic-list li .author-avatar {
-      width: 10%;
+      width: 48px;
+      margin-right: 20px;
       float: left; }
       .topic-list li .author-avatar img {
         background: #fff;
@@ -729,7 +730,7 @@ footer {
   .last-reply-list ul li a {
     color: #666; }
     .last-reply-list ul li a:hover {
-      color: #fc5140; }
+      color: #4083aa; }
   .last-reply-list ul li:before, .last-reply-list ul li:after {
     content: "";
     display: table; }
@@ -832,7 +833,7 @@ footer {
   .history-list li a {
     color: #666; }
     .history-list li a:hover {
-      color: #fc5140; }
+      color: #4083aa; }
 
 #reply-reply-desc {
   line-height: 22px;
@@ -865,7 +866,7 @@ footer {
     width: 100px;
     height: 40px;
     margin-top: 20px;
-    background: #0084ff;
+    background: #3498db;
     color: #fff;
     border: none;
     -webkit-border-radius: 3px;
@@ -874,7 +875,7 @@ footer {
     -o-border-radius: 3px;
     border-radius: 3px; }
     .reply-form button[type=submit]:hover {
-      background: #007aeb; }
+      background: #2980b9; }
 
 .reply-list h2, .hot-reply-list h2 {
   border-bottom: 2px solid #eee;
@@ -1040,14 +1041,14 @@ footer {
     padding: 0 30px;
     border: none;
     color: #fff;
-    background: #0084ff;
+    background: #3498db;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     -ms-border-radius: 3px;
     -o-border-radius: 3px;
     border-radius: 3px; }
     .reg-form .act button:hover, .login-form .act button:hover {
-      background: #007aeb; }
+      background: #2980b9; }
   .reg-form .act .goregister, .reg-form .act .gologin, .login-form .act .goregister, .login-form .act .gologin {
     position: absolute;
     top: 30px;
@@ -1122,11 +1123,11 @@ footer {
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
-  background: #0084ff;
+  background: #3498db;
   color: #fff;
   text-align: center; }
   .settings form button[type=submit]:hover {
-    background: #007aeb; }
+    background: #2980b9; }
   .settings form button[type=submit].ml {
     margin-left: 62px; }
 .settings form .up-trigger {
@@ -1189,7 +1190,7 @@ footer {
     width: 100px;
     height: 40px;
     line-height: 40px;
-    background: #0084ff;
+    background: #3498db;
     color: #fff;
     border: none;
     padding: 0;
@@ -1199,7 +1200,7 @@ footer {
     -o-border-radius: 3px;
     border-radius: 3px; }
     #new-topic button[type=submit]:hover {
-      background: #007aeb; }
+      background: #2980b9; }
   #new-topic #auto-save-trigger, #new-topic #clear-save {
     margin-left: 20px; }
   #new-topic #auto-save {
@@ -1370,7 +1371,7 @@ footer {
     .user-wrapper .user-top-bg img.user-avatar {
       z-index: 10;
       position: absolute;
-      left: 111px;
+      left: 61px;
       bottom: -60px;
       width: 128px;
       height: 128px;
@@ -1381,14 +1382,14 @@ footer {
       border-radius: 5px;
       border: 5px solid white; }
   .user-wrapper .user-main {
-    width: 1240px;
+    width: 1040px;
     position: relative; }
   .user-wrapper .user-detail {
     position: absolute;
     left: 0;
     top: 10px;
     z-index: 10;
-    width: 360px;
+    width: 260px;
     overflow: hidden;
     padding-bottom: 10px;
     z-index: 99;
@@ -1417,8 +1418,7 @@ footer {
       .user-wrapper .user-detail .focus dl {
         float: left;
         width: 101px;
-        margin: 0 12px;
-        cursor: pointer; }
+        margin: 0 12px; }
         .user-wrapper .user-detail .focus dl dt, .user-wrapper .user-detail .focus dl dd {
           margin: 0;
           color: #333;
@@ -1459,8 +1459,8 @@ footer {
           color: #fff;
           background: #30c880; }
   .user-wrapper .user-topics, .user-wrapper .user-replys, .user-wrapper .car-list {
-    margin-left: 380px;
-    width: 850px;
+    margin-left: 280px;
+    width: 750px;
     padding: 10px 0 10px 10px;
     float: left; }
     .user-wrapper .user-topics h2, .user-wrapper .user-replys h2, .user-wrapper .car-list h2 {
@@ -1558,11 +1558,11 @@ footer {
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
-  background: #0084ff;
+  background: #3498db;
   color: #fff;
   text-align: center; }
 #addcar-form button[type=submit]:hover {
-  background: #007aeb; }
+  background: #2980b9; }
 #addcar-form textarea {
   padding: 5px;
   width: 60%;
@@ -1570,6 +1570,9 @@ footer {
 
 .about h3 {
   margin-top: 20px; }
+
+.user-list li {
+  float: left; }
 
 @media screen and (min-width: 767px) and (max-width: 970px) {
   .main .main-wrapper {
