--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -17,7 +17,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 1240px;
+    width: 1040px;
     height: 50px;
     position: relative; }
     .nav .nav-container:before, .nav .nav-container:after {
@@ -57,7 +57,7 @@
   .nav .menu {
     position: absolute;
     text-align: right;
-    right: 30px;
+    right: 0;
     width: 40%;
     height: 50px; }
     .nav .menu li {
@@ -86,7 +86,7 @@
           position: absolute;
           top: 7px;
           left: 28px;
-          background: #fc5140;
+          background: #e74c3c;
           color: #fff;
           -webkit-border-radius: 8px;
           -moz-border-radius: 8px;
@@ -120,9 +120,9 @@ footer {
   footer .wrapper {
     line-height: 24px;
     padding: 20px 30px;
-    border-top: 1px solid #f4f4f4;
+    border-top: 1px solid #f0f0f0;
     margin: 0 auto;
-    width: 1240px; }
+    width: 1040px; }
   footer a {
     color: #999; }
     footer a:hover {
