--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -56,7 +56,7 @@ $menu-width:30px;
     .menu{
         position:absolute;
         text-align:right;
-        right:30px;
+        right:0;
         width:40%;
         height:50px;
         li{
@@ -106,7 +106,7 @@ footer{
     .wrapper{
         line-height:24px;
         padding:20px 30px;
-        border-top:1px solid #f4f4f4;
+        border-top:1px solid #f0f0f0;
         margin:0 auto;
         width:$main-width;
     }
