--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,16 @@
+.bg {
+  position: fixed;
+  top: 50px;
+  left: 0;
+  bottom: 0;
+  right: 0; }
+  .bg img {
+    width: 100%;
+    height: 100%; }
+
 .main {
   width: 100%; }
   .main .main-wrapper {
-    background: #fff;
     margin: 0px auto;
     width: 1040px;
     min-height: 650px;
@@ -396,10 +405,19 @@
       font-size: 20px; }
 
 .reg-form, .login-form {
-  padding: 50px 10%;
-  font-size: 14px;
-  width: 60%;
-  margin: 0 10%;
+  position: absolute;
+  z-index: 5;
+  padding: 50px 100px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  ront-size: 14px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.8);
+  width: 540px;
+  margin: 0 150px;
   text-align: center; }
   .reg-form h1, .login-form h1 {
     margin-bottom: 30px; }
