--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,11 +1,21 @@
 @import "functions.scss";
 @import "animate.scss";
 
+.bg{
+    position:fixed;
+    top:50px;
+    left:0;
+    bottom:0;
+    right:0;
+    img{
+        width:100%;
+        height:100%;
+    }
+}
 .main{
     width:100%;
     .main-wrapper{
         @include clearfix();
-        background:#fff;
         margin:0px auto;
         width:$main-width;
         min-height:650px;
@@ -435,12 +445,15 @@
 }
 //reg,login
 .reg-form,.login-form{
-    padding:50px 10%;
-    //@include border-radius(5px);
-    //@include box-shadow(0px 0px 10px #ccc);
-    font-size:14px;
-    width:60%;
-    margin:0 10%;
+    position:absolute;
+    z-index:5;
+    padding:50px 100px;
+    @include border-radius(5px);
+    ront-size:14px;
+    color:#fff;
+    background:rgba(0,0,0,.8);
+    width:540px;
+    margin:0 150px;
     text-align:center;
     h1{
         margin-bottom:30px;
