--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -594,8 +594,7 @@ footer {
   bottom: 0;
   right: 0; }
   .bg img {
-    width: 100%;
-    height: 100%; }
+    width: 100%; }
 
 .main {
   width: 100%; }
