--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -707,7 +707,6 @@ footer {
         vertical-align: middle; }
     .topic-list li .author-avatar {
       width: 48px;
-      margin-right: 20px;
       float: left; }
       .topic-list li .author-avatar img {
         background: #fff;
@@ -722,7 +721,7 @@ footer {
       float: left;
       overflow: hidden;
       width: 63%;
-      padding: 0 1%; }
+      padding: 0 2%; }
     .topic-list li .topic-detail {
       line-height: 48px;
       float: left;
@@ -1591,8 +1590,29 @@ footer {
 .about h3 {
   margin-top: 20px; }
 
-.user-list li {
-  float: left; }
+.user-list {
+  width: 100%; }
+  .user-list:before, .user-list:after {
+    content: "";
+    display: table; }
+  .user-list:after {
+    clear: both; }
+  .user-list li {
+    width: 80px;
+    height: 96px;
+    overflow: hidden;
+    text-align: center;
+    float: left;
+    margin-top: 14px;
+    text-align: center; }
+    .user-list li .avatar, .user-list li .user-avatar {
+      margin: 0 auto;
+      width: 48px;
+      height: 48px; }
+    .user-list li .name {
+      margin-top: 10px;
+      line-height: 18px;
+      color: #000; }
 
 @media screen and (min-width: 767px) and (max-width: 970px) {
   .main .main-wrapper {
