--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -1,5 +1,5 @@
 html {
-  font: 13px/1.7 "Helvetica Neue", Arial, "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif; }
+  font: 13px/1.7 "Helvetica Neue", Arial, "Hiragino Sans GB", sans-serif; }
 
 body {
   margin: 0;
@@ -589,12 +589,18 @@ footer {
 
 .bg {
   position: fixed;
+  background: #000;
   top: 50px;
   left: 0;
   bottom: 0;
-  right: 0; }
+  right: 0;
+  width: 100%;
+  min-width: 1024px;
+  min-height: 768px; }
   .bg img {
-    width: 100%; }
+    width: 100%;
+    min-width: 1024px;
+    min-height: 768px; }
 
 .main {
   width: 100%; }
@@ -720,7 +726,7 @@ footer {
     .topic-list li .topic-title {
       float: left;
       overflow: hidden;
-      width: 63%;
+      width: 61%;
       padding: 0 2%; }
     .topic-list li .topic-detail {
       line-height: 48px;
