--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -405,9 +405,12 @@
         .rcontent{
             color:#333;
         }
+        .rrwrapper{
+            border-left:2px solid #ccc;
+            padding-left:8px;
+            margin-bottom:5px;
+        }
         .rrdesc{
-            border-left:5px solid #ccc;
-            padding-left:5px;
             color:#ccc;
         }
     }
@@ -634,6 +637,11 @@
     }
     #showurl{
         color:#cc181e;
+    }
+    #show-avatar{
+        width:128px;
+        height:128px;
+        @include border-radius(5px);
     }
 }
 /*
@@ -864,7 +872,7 @@
         position:relative;
         z-index:1;
         width:100%;
-        height:300px;
+        max-height:400px;
         img.user-avatar{
             z-index:10;
             position:absolute;
@@ -931,7 +939,7 @@
         padding-left:390px;
         font-size:16px;
         .action{
-            color:$action-green;
+            color:#999;
             a{
                 font-size:14px;
                 margin-left:10px;
@@ -955,7 +963,13 @@
             }
         }
     }
-    .user-topics,.user-replys,.car-list{
+    .car-list{
+        width:750px;
+        margin-left:280px;
+        padding:10px 0 10px 10px;
+        float:left;
+    }
+    .user-topics,.user-replys{
         margin-left:280px;
         width:750px;
         padding:10px 0 10px 10px;
@@ -975,12 +989,13 @@
                 padding-left:10px;
                 margin:6px 0;
                 a{
+                    width:650px;
                     display:inline-block;
                     font-weight:bold;
                     text-decoration:none;
                     color:#333;
                     &:hover{
-                        color:red;
+                        color:$link-color;
                     }
                 }
                 span{
